сделал структуру для ответа
