# docs/swagger.json
@@ -44,7 +44,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/test.Response"
+                            "$ref": "#/definitions/ping.Response"
                         }
                     }
                 }
@@ -52,12 +52,61 @@
         }
     },
     "definitions": {
-        "lemma.ListItem": {
+        "entities.Lemma": {
             "type": "object",
             "properties": {
-                "text": {
+                "F": {
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "properties": {
+                            "G": {
+                                "type": "array",
+                                "items": {
+                                    "type": "object",
+                                    "properties": {
+                                        "V": {
+                                            "type": "string",
+                                            "example": "значение"
+                                        }
+                                    }
+                                }
+                            },
+                            "T": {
+                                "type": "string",
+                                "example": "текст"
+                            }
+                        }
+                    }
+                },
+                "ID": {
                     "type": "string",
-                    "example": "Бугульма"
+                    "example": "ID леммы"
+                },
+                "L": {
+                    "type": "object",
+                    "properties": {
+                        "G": {
+                            "type": "array",
+                            "items": {
+                                "type": "object",
+                                "properties": {
+                                    "V": {
+                                        "type": "string",
+                                        "example": "значение"
+                                    }
+                                }
+                            }
+                        },
+                        "T": {
+                            "type": "string",
+                            "example": "текст леммы"
+                        }
+                    }
+                },
+                "Rev": {
+                    "type": "string",
+                    "example": "номер последней ревизии этой леммы"
                 }
             }
         },
@@ -67,12 +116,12 @@
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/lemma.ListItem"
+                        "$ref": "#/definitions/entities.Lemma"
                     }
                 }
             }
         },
-        "test.Response": {
+        "ping.Response": {
             "type": "object",
             "properties": {
                 "message": {
